correction-gap

--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ section.unlock {
 
 section.unlock div.container {
   display: flex;
-  justify-content: space-between;
+  gap: 49px;
   align-items: center;
 }
 
